--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Skilled</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+  <!-- SITE-HEADER -->
+  <header class="site-header">
+    <div class="site-header__container container">
+      <a href="#" class="site-header__logo logo">
+        <img class="logo__image" src="./img/logo_img.svg" alt="logo__image" width="111" height="27">
+      </a>
+      <button class="button button--header">Get Started</button>
+    </div>
+  </header>
 
 
 
