Add hero section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 
-  <!-- SITE-HEADER -->
+  <!-- SITE-WRAPPER-->
+
+  <div class="site-wrapper">
+      <!-- SITE-HEADER -->
   <header class="site-header">
     <div class="site-header__container container">
       <a href="#" class="site-header__logo logo">
@@ -22,7 +25,20 @@
     </div>
   </header>
 
+  <!-- HERO -->
 
+  <section class="hero">
+    <div class="hero__container container">
+      <div class="hero__content">
+        <h1 class="visually-hidden">Skilled</h1>
+        <h2 class="hero__heading">Maximize skill,
+          minimize budget</h2>
+          <p class="hero__text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+          <a href="#" class="button button--hero">Get Started</a>
+      </div>
+    </div>
+  </section>
+  </div>
 
   <script src="./js/main.js"></script>
 </body>
