Add feature section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,52 @@
       </div>
     </div>
   </section>
+
+  <!-- FEATURES -->
+
+  <section class="features">
+    <div class="features__container container">
+      <ul class="features__list">
+        <li class="features__item">
+          <h2 class="features__heading">Check out our most popular courses!</h2>
+        </li>
+        <li class="features__item">
+          <div class="features__img-wrapper"><img class="features__img" src="./img/human.svg" alt="human_log" width="23" height="24" ></div>
+          <h3 class="features__heading">Animation</h3>
+          <p class="features__text">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+          <a href="#" class="features__link">Get Started</a>
+        </li>
+
+        <li class="features__item">
+          <div class="features__img-wrapper"><img class="features__img" src="./img/design.svg" alt="design_log" width="23" height="24" ></div>
+          <h3 class="features__heading">Design</h3>
+          <p class="features__text">Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+          <a href="#" class="features__link">Get Started</a>
+        </li>
+
+        <li class="features__item">
+          <div class="features__img-wrapper"><img class="features__img" src="./img/camera.svg" alt="camera_log" width="23" height="24" ></div>
+          <h3 class="features__heading">Photography</h3>
+          <p class="features__text">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
+          <a href="#" class="features__link">Get Started</a>
+        </li>
+
+        <li class="features__item">
+          <div class="features__img-wrapper"><img class="features__img" src="./img/crypto.svg" alt="crypto_log" width="23" height="24" ></div>
+          <h3 class="features__heading">Crypto</h3>
+          <p class="features__text">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
+          <a href="#" class="features__link">Get Started</a>
+        </li>
+
+        <li class="features__item">
+          <div class="features__img-wrapper"><img class="features__img" src="./img/business.svg" alt="business_log" width="23" height="24" ></div>
+          <h3 class="features__heading">Business</h3>
+          <p class="features__text">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
+          <a href="#" class="features__link">Get Started</a>
+        </li>
+      </ul>
+    </div>
+  </section>
   </div>
 
   <script src="./js/main.js"></script>
