--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
       </ul>
     </div>
   </section>
+
+  <!-- FOOTER -->
+
+  <footer class="site-footer">
+    <div class="site-footer__container container">
+      <a href="#" class="site-footer__logo logo">
+        <img class="logo__image" src="./img/logo_img.svg" alt="logo__image" width="111" height="27">
+      </a>
+      <button class="button button--footer">Get Started</button>
+    </div>
+  </footer>
   </div>
 
   <script src="./js/main.js"></script>
