--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           <p class="hero__text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
           <a href="#" class="button button--hero">Get Started</a>
       </div>
+      <div class="hero__course-time-info">
+        <span class="hero__course-time">Course hours</span>
+        <span class="hero__course-time-hour">1,451</span>
+      </div>
+      <div class="hero__course-member-info">
+        <span class="hero__course-member">Members</span>
+        <span class="hero__course-member-count">29k</span>
+      </div>
     </div>
   </section>
 
@@ -90,7 +98,7 @@
   <footer class="site-footer">
     <div class="site-footer__container container">
       <a href="#" class="site-footer__logo logo">
-        <img class="logo__image" src="./img/logo_img.svg" alt="logo__image" width="111" height="27">
+        <img class="logo__image" src="./img/footer_logo_img.svg" alt="logo__image" width="111" height="27">
       </a>
       <button class="button button--footer">Get Started</button>
     </div>
